@@ -1,3 +1,8 @@
+2011-10-07  Bernd Schmidt  <bernds@codesourcery.com>
+
+	PR target/49049
+	* gcc.c-torture/compile/pr49049.c: New test.
+
 2011-10-06  Jakub Jelinek  <jakub@redhat.com>
 
 	PR tree-optimization/49279
