@@ -1,3 +1,8 @@
+2011-10-07  Bernd Schmidt  <bernds@codesourcery.com>
+
+ 	PR target/49049
+ 	* config/arm/arm.md (arm_subsi3_insn): Lose the last alternative.
+
 2011-10-06  Jakub Jelinek  <jakub@redhat.com>
 
 	* tree.h (avoid_folding_inline_builtin): New prototype.
